fix overflow

--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -1,3 +1,9 @@
+html,
+body {
+  width: 100%;
+  overflow-x: hidden !important;
+}
+
 .fz-14 {
   font-size: 14px;
 }
